# TeskTaskRLT

./: add_data.py  main.py  pyproject.toml
src/bot/: __init__.py  src_router.py
src/config/: __init__.py  config.py
src/database/: __init__.py  database.py
src/utils/: __init__.py  logic.py
